--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
             gcc-riscv64-linux-gnu \
             binutils-riscv64-linux-gnu
       - name: Build
-        run: ./compile.sh
+        run: make -j
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
